hub-search-master@138a64ecd15/k8s/openshift-fokus-piveau.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: piveau-hub-search
  labels:
    app: piveau-hub-search
spec:
  ports:
    - name: http
      port: 8080
      targetPort: default
      protocol: TCP
    - name: http-cli
      port: 8081
      targetPort: cli
      protocol: TCP
  selector:
    app: piveau-hub-search
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: piveau-hub-search
  name: piveau-hub-search
spec:
  selector:
    matchLabels:
      app: piveau-hub-search
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: piveau-hub-search
    spec:
      containers:
        - name: piveau-hub-search
          image: dockerhub.fokus.fraunhofer.de:5000/piveau/hub/piveau-hub-search:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: default
            - containerPort: 8081
              name: cli
          #resources:
          #  requests:
          #    cpu: 1000m
          #    memory: 4Gi
          #  limits:
          #    cpu: 2000m
          #    memory: 8Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piveau-hub-search
  labels:
    app: piveau-hub-search
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: piveau-hub-search-piveau.apps.osc.fokus.fraunhofer.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: piveau-hub-search
                port:
                  name: http
    - host: piveau-hub-search-cli-piveau.apps.osc.fokus.fraunhofer.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: piveau-hub-search
                port:
                  name: http-cli
